reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_enum_documented.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_input_schema::<TestEnumDocumented<u8>>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflect::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "enum",
      "name": "reflect_demo::tests::basic::TestEnumDocumented",
      "description": " Some Enum docs\n more",
      "parameters": [
        {
          "name": "T",
          "description": " some generic param docs\n multiline"
        }
      ],
      "variants": [
        {
          "name": "Variant1",
          "description": " Variant1 docs",
          "fields": [
            {
              "name": "0",
              "description": " variant1 field docs",
              "type": {
                "name": "T"
              },
              "required": true
            }
          ]
        },
        {
          "name": "Variant2",
          "description": " Variant2 docs\n multiline\n more\n more",
          "fields": [
            {
              "name": "named_field",
              "description": " named field variant2 field docs",
              "type": {
                "name": "T"
              },
              "required": true
            }
          ]
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
