reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_enum_documented_input.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestEnumDocumented::<u8>::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestEnumDocumented",
    "parameters": [
      {
        "name": "u8"
      }
    ]
  },
  {
    "name": "",
    "types": [
      {
        "kind": "enum",
        "name": "reflect_demo::tests::basic::TestEnumDocumented",
        "description": " Some Enum docs\n more",
        "parameters": [
          {
            "name": "T",
            "description": " some generic param docs\n multiline"
          }
        ],
        "variants": [
          {
            "name": "Variant1",
            "description": " Variant1 docs",
            "fields": [
              {
                "name": "0",
                "description": " variant1 field docs",
                "type": {
                  "name": "T"
                }
              }
            ]
          },
          {
            "name": "Variant2",
            "description": " Variant2 docs\n multiline\n more\n more",
            "fields": [
              {
                "name": "named_field",
                "description": " named field variant2 field docs",
                "type": {
                  "name": "T"
                }
              }
            ]
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
