reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_documented-2.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_input_typescript_code::<TestStructDocumented>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflect-cli
//
// Schema name: 
// 




export namespace reflect {

/// Struct object with no fields
export interface Empty {
    }


/// Error object which is expected to be never returned
export interface Infallible {
    }

}

export namespace reflect_demo {

export namespace tests {

export namespace basic {

/// Some Struct docs
/// more
/// more
export interface TestStructDocumented {
    /// field docs
    /// multiline
    f: number /* u8 */;
    }

}
}
}
