reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_documented.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_input_schema::<TestStructDocumented>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflect::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "struct",
      "name": "reflect_demo::tests::basic::TestStructDocumented",
      "description": " Some Struct docs\n more\n more",
      "fields": [
        {
          "name": "f",
          "description": " field docs\n multiline",
          "type": {
            "name": "u8"
          },
          "required": true
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
