reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_documented_input.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructDocumented::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructDocumented"
  },
  {
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructDocumented",
        "description": " Some Struct docs\n more\n more",
        "fields": [
          {
            "name": "f",
            "description": " field docs\n multiline",
            "type": {
              "name": "u8"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
]
