reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_empty.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_schema::<TestStructEmpty>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::basic::TestStructEmpty"
      },
      "output_type": {
        "name": "reflect_demo::tests::basic::TestStructEmpty"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructEmpty"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructEmpty"
      }
    ]
  }
}
