reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_empty_input.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructEmpty::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructEmpty"
  },
  {
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructEmpty"
      }
    ]
  }
]
