reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_empty_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructEmpty::reflect_output()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructEmpty"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructEmpty"
      }
    ]
  }
]
